[package]
name = "tightness"
version = "0.1.0"
authors = ["PabloMansanet <pablomansanet@gmail.com>"]
edition = "2018"
license = "MIT"

[dependencies]
tightness-core = { version = "0.1.0", path = "tightness-core" }
tightness-proc = { version = "0.1.0", path = "tightness-proc" }

[workspace]
members = ["tightness-core", "tightness-proc"]
